kubernetes/apps/coredns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coredns
  labels:
    name: coredns
