kubernetes/apps/coredns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns
  namespace: coredns
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.87.13"
spec:
  type: LoadBalancer
  selector:
    app: coredns
  ports:
  - name: dns
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-metrics
  namespace: coredns
spec:
  type: ClusterIP
  selector:
    app: coredns
  ports:
  - name: metrics
    port: 9153
    targetPort: 9153
    protocol: TCP
